feat: Add base HTML template with navigation and a music insights dashboard featuring various charts and tables.

--- a/templates/base.html
+++ b/templates/base.html
@@ -51,6 +51,8 @@
 
     <!-- ECharts -->
     <script src="https://cdn.jsdelivr.net/npm/echarts@5.4.3/dist/echarts.min.js"></script>
+    {% block scripts %}
+    {% endblock %}
 </body>
 
 </html>
