--- a/musicinsights/static/musicinsights/css/style.css
+++ b/musicinsights/static/musicinsights/css/style.css
@@ -164,6 +164,10 @@ body {
     grid-row: span 2;
 }
 
+.row-span-3 {
+    grid-row: span 3;
+}
+
 /* Cards */
 .bento-card {
     background-color: var(--card-bg);
@@ -191,7 +195,7 @@ body {
 }
 
 .card-title {
-    font-size: 1rem;
+    font-size: 1.3rem;
     font-weight: 600;
     color: var(--text-secondary);
     display: flex;
